--- a/package.json
+++ b/package.json
@@ -14,39 +14,59 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@expo-google-fonts/montserrat": "^0.2.3",
-    "@expo/html-elements": "^0.5.1",
+    "@expo-google-fonts/montserrat": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.2",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@react-native-community/datetimepicker": "^7.6.1",
-    "@react-navigation/bottom-tabs": "^6.5.9",
-    "@react-navigation/drawer": "^6.6.4",
-    "@react-navigation/native": "^6.1.8",
-    "@react-navigation/native-stack": "^6.9.14",
-    "@types/react": "~17.0.21",
-    "axios": "^1.5.1",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-community/netinfo": "9.3.5",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/drawer": "^6.3.1",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.0",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~49.0.13",
-    "expo-app-loading": "^2.1.1",
-    "expo-device": "~5.4.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "~5.0.2",
-    "expo-notifications": "~0.14.0",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-web-browser": "~12.3.2",
-    "flagged": "^2.0.10",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-asset": "~8.7.0",
+    "expo-cli": "^6.0.0",
+    "expo-constants": "~14.0.2",
+    "expo-dev-client": "~2.0.1",
+    "expo-device": "~5.0.0",
+    "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-linking": "~3.3.1",
+    "expo-notifications": "~0.17.0",
+    "expo-secure-store": "~12.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "expo-web-browser": "~12.0.0",
+    "flagged": "^2.0.3",
     "patch-package": "^8.0.0",
-    "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.8",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-currency-input": "^1.1.1",
-    "react-native-element-dropdown": "^2.10.0",
-    "react-native-elements": "^3.4.3",
-    "react-native-paper": "^5.11.0",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-svg-transformer": "^1.1.0",
-    "typescript": "~4.3.5"
+    "react-native-currency-input": "^1.0.1",
+    "react-native-date-picker": "^4.2.0",
+    "react-native-element-dropdown": "^1.8.7",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-image-picker": "^4.7.3",
+    "react-native-paper": "^4.12.3",
+    "react-native-pusher-push-notifications": "^2.5.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -59,7 +79,18 @@
     "eslint-plugin-react-native": "^4.1.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.5",
+    "@types/react": "~18.0.28",
+    "@types/react-native": "^0.70.15",
+    "@types/react-native-simple-radio-button": "^2.7.2",
+    "@types/react-test-renderer": "^18.0.3",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.0",
+    "metro-react-native-babel-preset": "0.72.3",
+    "react-test-renderer": "18.1.0",
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
