--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start:prod": "NODE_ENV=production && expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -16,11 +17,11 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/webpack-config": "^19.0.0",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.5.2",
-    "@react-native-community/netinfo": "9.3.5",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
@@ -29,47 +30,52 @@
     "axios": "^0.26.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.4.0",
-    "expo": "^47.0.0",
+    "expo": "~49.0.13",
     "expo-app-loading": "~2.1.1",
-    "expo-asset": "~8.7.0",
-    "expo-cli": "^6.0.0",
-    "expo-constants": "~14.0.2",
-    "expo-dev-client": "~2.0.1",
-    "expo-device": "~5.0.0",
-    "expo-font": "~11.0.1",
-    "expo-image-picker": "~14.0.2",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-linking": "~3.3.1",
-    "expo-notifications": "~0.17.0",
-    "expo-secure-store": "~12.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
-    "expo-web-browser": "~12.0.0",
+    "expo-asset": "~8.10.1",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.11",
+    "expo-device": "~5.4.0",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
+    "expo-notifications": "~0.20.1",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.16",
+    "expo-web-browser": "~12.3.2",
     "flagged": "^2.0.3",
     "patch-package": "^8.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-currency-input": "^1.0.1",
     "react-native-date-picker": "^4.2.0",
     "react-native-element-dropdown": "^1.8.7",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^4.7.3",
     "react-native-paper": "^4.12.3",
     "react-native-pusher-push-notifications": "^2.5.2",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-simple-radio-button": "^2.7.4",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.7",
+    "@types/react": "~18.2.14",
+    "@types/react-native-simple-radio-button": "^2.7.2",
+    "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.51.0",
@@ -78,19 +84,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-native": "^4.1.0",
     "husky": "^8.0.0",
-    "lint-staged": "^15.0.1",
-    "prettier": "^3.0.3",
-    "@tsconfig/react-native": "^3.0.2",
-    "@types/jest": "^29.5.5",
-    "@types/react": "~18.0.28",
-    "@types/react-native": "^0.70.15",
-    "@types/react-native-simple-radio-button": "^2.7.2",
-    "@types/react-test-renderer": "^18.0.3",
-    "jest": "^26.6.3",
+    "jest": "^29.2.1",
     "jest-expo": "^47.0.0",
+    "lint-staged": "^15.0.1",
     "metro-react-native-babel-preset": "0.72.3",
+    "prettier": "^3.0.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.1.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
