--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",
-  "compilerOptions": {
-    "moduleResolution": "node",
-  "jsx": "react-jsx",
-    "strict": false
-  }
+    "extends": "@tsconfig/react-native/tsconfig.json",
+    "compilerOptions": {
+        "moduleResolution": "node",
+        "jsx": "react-jsx",
+        "strict": false,
+        "types": ["react", "react-native", "@types/node"]
+    }
 }
