--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "start:prod": "NODE_ENV=production && expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "start": "npx expo start",
+    "start:prod": "NODE_ENV=production && npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write .",
@@ -16,12 +16,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.2",
+    "@expo/config-plugins": "~7.2.2",
+    "@expo/prebuild-config": "~6.2.4",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
@@ -29,7 +29,6 @@
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.0",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "eslint-plugin-react-hooks": "^4.4.0",
     "expo": "~49.0.13",
     "expo-app-loading": "~2.1.1",
     "expo-asset": "~8.10.1",
@@ -53,23 +52,19 @@
     "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-currency-input": "^1.0.1",
-    "react-native-date-picker": "^4.2.0",
     "react-native-element-dropdown": "^1.8.7",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-image-picker": "^4.7.3",
     "react-native-paper": "^4.12.3",
-    "react-native-pusher-push-notifications": "^2.5.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "~0.19.6"
+    "expo-build-properties": "~0.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/metro-config": "^0.10.7",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.7",
