--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ EXPO_PUBLIC_APP_ID=2566
 EXPO_PUBLIC_APP_TOKEN="app_token"
 EXPO_PUBLIC_PAYSTACK_KEY=
 EXPO_PUBLIC_PORTAL_API_URL="https://altara-play-api.herokuapp.com/api/"
+EXPO_PUBLIC_LOAN_APP_KEY="LAAKswUiUtYsj98CXRG0EDrKmF0m2VbkGUwCx64zALrKEY"
