--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "expo-updates": "~0.18.16",
         "expo-web-browser": "~12.3.2",
         "flagged": "^2.0.3",
+        "moment": "^2.29.4",
         "patch-package": "^8.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
