--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "expo-updates": "~0.18.16",
         "expo-web-browser": "~12.3.2",
         "flagged": "^2.0.3",
+        "moment": "^2.29.4",
         "patch-package": "^8.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -55,10 +56,12 @@
         "react-native-elements": "^3.4.2",
         "react-native-gesture-handler": "~2.12.0",
         "react-native-paper": "^4.12.3",
+        "react-native-paystack-webview": "^4.0.3",
         "react-native-reanimated": "~3.3.0",
         "react-native-safe-area-context": "4.6.3",
         "react-native-svg": "13.9.0",
-        "react-native-svg-transformer": "^1.0.0"
+        "react-native-svg-transformer": "^1.0.0",
+        "react-native-webview": "13.2.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
