--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
     "expo-device": "~5.4.0",
+    "expo-document-picker": "~11.5.4",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
@@ -58,11 +59,11 @@
     "react-native-paper": "^4.12.3",
     "react-native-paystack-webview": "^4.0.3",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-webview": "13.2.2",
-    "expo-document-picker": "~11.5.4"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
